@@ -1,3 +1,8 @@
+bloonix-server (0.20) released at 2015-XX-XX
+
+    * Nagios stats can now be parsed and stored.
+    * ServiceChecker now except __DIE__.
+
 bloonix-server (0.19) released at 2015-02-16
 
     * Kicked sth_cache_enabled from database config.
